2024-05-08T16:15:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9005096543 # 254
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 314 485 / 316 489
* notice: next accum: outdated-unq outdated-all / unq all: 315 488 / 317 490
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-04-24] / [2024-05-08]

2024-04-25T16:14:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8835948279 # 215
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-25
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 314 485 / 315 488
* notice: next accum: outdated-unq outdated-all / unq all: 314 485 / 316 489
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-25]

2024-04-24T16:13:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8819798681 # 212
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 313 484 / 314 485
* notice: next accum: outdated-unq outdated-all / unq all: 314 485 / 315 488
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2024-02-21] / [2024-04-24]

2024-02-21T08:10:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7985877973 # 136