@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-08T16:15:24Z",
-  "count_outdated" : 488,
-  "uniques_outdated" : 315,
+  "timestamp" : "2024-05-09T16:15:27Z",
+  "count_outdated" : 489,
+  "uniques_outdated" : 316,
   "count" : 490,
   "uniques" : 317,
   "clones" : [
-    {
-      "timestamp": "2024-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
